--- a/package.json
+++ b/package.json
@@ -12,9 +12,7 @@
   "dependencies": {
     "@types/node": "^18.0.6",
     "axios": "^1.6.2",
-    "node-fetch": "^3.3.2",
-    "node-telegram-bot-api": "^0.64.0",
-    "request": "^2.88.2"
+    "node-fetch": "^3.2.6",
+    "node-telegram-bot-api": "^0.64.0"
   }
 }
-
