--- a/package.json
+++ b/package.json
@@ -7,6 +7,19 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
+  {
+  "name": "starter-micro-api",
+  "version": "1.0.0",
+  "description": "Cyclic.sh micro api starter",
+  "main": "index.js",
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "author": "",
+  "license": "ISC",
+  "dependencies": {
+  }
+},
   "keywords": [],
   "author": "",
   "license": "ISC",
