--- a/vercel.json
+++ b/vercel.json
@@ -1,10 +1,10 @@
 {
   "version": 2,
   "builds": [
-    { "src": "app.js", "use": "@vercel/node" }
+    { "src": "app.mjs", "use": "@vercel/node" }
   ],
   "routes": [
-    { "src": "/send", "dest": "app.js" },
-    { "src": "/(.*)", "dest": "app.js" }
+    { "src": "/send", "dest": "app.mjs" },
+    { "src": "/(.*)", "dest": "app.mjs" }
   ]
 }
