--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
   "dependencies": {
     "@types/node": "^18.0.6",
     "axios": "^1.6.2",
-    "node-fetch": "^3.2.6",
+     "node-fetch": "2.6.14",
     "node-telegram-bot-api": "^0.64.0"
   }
 }
